@@ -10,23 +10,23 @@ DIST webalizer-2.23-05-src.tar.bz2 308238 SHA256 afc88b8ee0927d9ed004962cb7e3d30
 DIST webalizer-geodb-latest.tgz 639447 SHA256 f2a1bd7fcc9c93ed6a627bd15f2c31866d5a6c6b7dd48852d84a129386327218 SHA512 0f32d1249902e17f37cd0e7680004262bbe5b4a34a00d882319258c6aed80503e89ed192d8365731ab507fa54560082ae16c7023d0bc2232350709106be24117 WHIRLPOOL 26f1edf87ea6102c5047b41702fd273d40360bde7c481183a3303e2c89af3d6ba7470cd942d4af1574bed8822b776a26ea13c2388b7654fffccee856cc99e571
 DIST webalizer.conf.gz 8986 SHA256 b7da31865a8c13a66756247d68242d6478900f2c2b9b5698ed35c0c613fb9a71 SHA512 ec7f815e0215116d72e6d93b471a4b86a1c152a8ebae7c374144cabeeb06750d3a39fde65faf069e9aeb133f27b0b4cdee16bed5442e7fbd4eb4f45a4f3cd84b WHIRLPOOL 58c2ced08eeba65e1c7acf951e2e0e1806af58fcd37997c4d824504235303d7f75cf6c05c7ce051e2e2f3b3abff9a929f0dfd7722a995a8ab65232cfb549e83a
 EBUILD webalizer-2.21.02.ebuild 3306 SHA256 3e4b070169893ccfe4ebcfbcd7655ffce2f9e6f4824623c1d398110821a63fde SHA512 eec521e30a54c78ea82dc5659c70c3a12ba32f3536498460c14c34b010dc8aa4d4f2ef7b3ddfed38c75b2c5f21438d8404d3dbec956df940fda7809e7bce9f49 WHIRLPOOL 20fddb0fb553f7a9f96186d8127105441e12530d4724e678e97bf39b2b501a52c2441ab1b8f5ee81ec87e108d67e7052131887b266cb50f52e4dbaf64e34a57d
-EBUILD webalizer-2.23.05.ebuild 3574 SHA256 160553d3c6729d049c4bc44c7daba19b4533f1adc18c31134236cba6da25af8b SHA512 aa34bf6453dee95192f3fdb9ec2dcd53bd8845e2bb42334df8251c601085716ccdb282525f257ddd3af443cc7a3e58f025a6e299246d2189e027c81c4edcb39f WHIRLPOOL 4346d1829e77886d16238abc6ba8f9040db0859f85049f022ff9598d4ca6e0d7ef44c61f0a9a818e9400b7599eacfc6c91f4472d7115cd188893e82ab73cc8c7
-MISC ChangeLog 13674 SHA256 72c8401b2f8f25a671322ef0bbd599ec75a8486f01939ca4ccdc9f5f41770a8a SHA512 42c3a3382f532d7cda1b66303979002b562bc73e61380fcfbf91cdd8603edc93b08394a31d5a3f42411184f74c163b2b26351e8e693b9880bbbf18954cc93fd5 WHIRLPOOL f351fcf95e5a7ca01aeb1fb74143a53ad8073c0cec631b901886fa9a81b2a2761f3ce57600e48d437ddabd6c1ff6daa9d56a46d42dab95eaeb7f0a15e08189db
+EBUILD webalizer-2.23.05.ebuild 3980 SHA256 c45bfc077d8935cd0ab139ef32984fbb12e5686756dceffc54ce7d58ff466e58 SHA512 36bc33879ed2da1b600c705bb25ffbd04e7294bc75821b5cc0320af08138eeebaa16b4d3b64c75cbc65afef0b2e75aadd1f7e90a9288112bd81074829d991262 WHIRLPOOL f4dfe8621d7422e29ab7114c8e5a71c591520a47364cc68df1e798ad105f7595425a6e29740782673a4c51defa48bafe4767a0b66ac02e134ed5a9c4291421d0
+MISC ChangeLog 13837 SHA256 03f2ca76466849e3ee205ccd97830dca9a6d02f1de87a8eaac33fcbbf92c03bb SHA512 e2f1e030c24e5ec8a225e3ab59329ba87c295495edf46e279ffc57499f563812a6942e2129de6e1d04a378bb168c951d0c8f497fd3d22954c4321a1f5ce43e8f WHIRLPOOL 1837797d34eb5cf880d9bc4d9ece8866774b0e395c2156f61fb7434c8e44bf3555d6503539206c79a7d53a9e9c617e8806e2d82cab2ad4ae6d694db0632eccf1
 MISC metadata.xml 233 SHA256 508e864fe9eca5b8405c2d52503c5a4ed3c432bac41391cdefb1c79ec57ce7b9 SHA512 2f782aa4f1643845da4aba216ae657a9c8b9cde830ef3ce15a3e6e964e2dcb8322ba2eab2c68f3906f53359ad0ffc810eb59fa024fd42f5e568643a6cb5837f6 WHIRLPOOL 869ea3360bf3837b2f51e116bc80f820cb3b8f4c618f9653a0b97968a3ceed6651d27db21f67d6f2911c0a3c1f2b51b84add27dedbcbefda222c8f84f12c151e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQt1QYAAoJEJOE+m71LUu69QIQAIBihEa9C81ro5JARaE0sBTb
-ss5jJ3x6BZ/aQRrSnYOl4yBP1+EnK5qxAf4985ZV6Gu+4MWuzN0qGaQvXVzCkE7u
-Y7iQWdlP5wZLlQ+rawn/mzEZOlzaFySnvyOpHkqbzOsKmuIijSIZ9L0x2LgXM5Cc
-V+xwzm7bnlng/j9VJvFPVFoHJdSrsceyd37f2grNwB2rj7nwVoWuokG1Vx9FEhkI
-zn8DuPLvTCPL7w+TI9LvoV3ARjmnLzUT03ojQtI2ljUMH3p5XiPJkixGu639n6/x
-SmkriHnvqmf6H0C9JzStgqyh+30GitYHGh1tv5UpsHOo0JHYTeF/LG6Thb6cBG+U
-Cmdc9g1o9VKFa3taNFaSIRVgiN7FvxgaPSOqln8A1nb8xRdOip88qeDUpfYWxYJt
-hdBrRob/J9+CgqnMB+bL9s8mAetPWZQDyNvl8l0LWBRcxvTtPAwbxzRUaEh8dNos
-E5JEN9hPaB9dcR/Krf2lm3AN9QN06pfljk7SerfptHp3ZGuDY1hzVTwd1XCHPt8Y
-q0evSKGH/DGa54bQxOvN6sqcMKRSV3cwK9LgKhTQZm10hCA2Ho7GQLZfcUmUQIyM
-vUgacnkle+jdsOcRSBNV1Mj7TMD2uMeQfva6f3t9ZnWDaQWDr9JAJrbk41auECA8
-wskT3cM3dkKtDt+EBAVB
-=HT4s
+iQIcBAEBCAAGBQJQz8YrAAoJEJOE+m71LUu6mHAQAKw2UmvmWv4E5tY7I9hPiCV9
+8Ta39n9dExXJk9r//Opidkxhhb34dhwZkAsFlw+yDLhKdM3fo88LvjlAhFBoULkr
+THiSINfoxEProqBCsnBTFatZa6C6EIzTPlvf94dmkpgx2eslnkUuPgX14oGlqNbp
+cgyNubpHZwNvfjrKwPKEk9+zNXLsFjD3tJRqKLZkDWY+dKRnaVl/vy5sjsbeP2YX
+tBhwrJsr/Om2lChsC9HbOoWeRipHAO4QDj07IyH3a8Jt8T5J+AH2dSFvdorStZpv
+mXAyfoffJdcciepiWEMeWkGw9HmEceasLcecEq5XfCD1WkYO20flnLLqZrEgNeWJ
+6ydDCZQeUvHo5wgnQ7EFxwaxI5z96S23zTiN0FTxrkH3IMNivvQ9bdGhOl1IiUmI
+xKCfD3T87/4EcBxrn/wIYrAH7ojfcMhCTlMePgv2hpo9sewKpU/U3bRnAvhcADYv
+lGpHxrqSdZ/kQxNq+MbwM09Igh748bSjiPuNXCnxlgBF/Jw+0jbhuuqfdt6f3PXJ
+iU2bwx0Q9ljUDz4q8Kty3CzoTaQwluapWJwPS6a1VWHs4+6qf5+bLqXiLtZhpRUW
+ASWHYqCcDir8x0a/TP+mKJ2CQR7OGiKCdBBCtyxInKt0TMzgDi7L0J+CVNgSBr2Y
+FYqOIiA8TgUW8H05ZiGt
+=fgF0
 -----END PGP SIGNATURE-----
