@@ -3,11 +3,11 @@ DEPEND=dev-libs/elfutils =dev-python/pypax-0.7.0[ptpax=,xtpax=] xtpax? ( sys-app
 DESCRIPTION=Tools to work with ELF binaries and libraries on Hardened Gentoo.
 EAPI=4
 HOMEPAGE=http://dev.gentoo.org/~blueness/elfix/
-IUSE=test +ptpax xtpax
+IUSE=+ptpax +xtpax
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-3
 RDEPEND=dev-libs/elfutils =dev-python/pypax-0.7.0[ptpax=,xtpax=] xtpax? ( sys-apps/attr )
 RESTRICT=test
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~blueness/elfix/elfix-0.7.0.tar.gz
-_md5_=4a7f8d57e1bbc85f7bd74e303410b4e4
+_md5_=8e028002c9bd04474d6075c48c9f5bb2
