@@ -1,5 +1,5 @@
 ####################################################################
-# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.14304 2012/12/17 08:46:35 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.14305 2012/12/18 01:36:41 blueness Exp $
 #
 # When you add an entry to the top of this file, add your name, the date, and
 # an explanation of why something is getting masked. Please be extremely
@@ -30,6 +30,11 @@
 ## app-misc/some-package
 
 #--- END OF EXAMPLES ---
+
+# Anthony G. Basile <blueness@gentoo.org> (17 Dec 2012)
+# Masked for removal in 30 days. (17 Jan 2012)
+# This is provided by USE=xtended webalizer, bug #445226
+app-admin/webalizer-xtended
 
 # Mike Pagano <mpagano@gentoo.org> (14 Dec 2012)
 # Masked for testing
