@@ -6,23 +6,23 @@ DIST elfix-0.6.0.tar.gz 134110 SHA256 7e7f8d1755d492d6000135e9cf137bb932bd591f06
 DIST elfix-0.7.0.tar.gz 362381 SHA256 18feb53c8588c3660906cf2cb35fb5a168a9394302f9bd5b69e29cab5582cde5 SHA512 fd880ee3389b79f02854ccbd7949d052c31e90231e0b8ad58f10cf4def85545a41a92ac6e8c6231ef20dd4450f91df5334e29c93dcfea201af4c1efacd17b84d WHIRLPOOL d3542ff7dbae7057687bc713bbfca4d76482539c679d266dfee436cd2fff1ebdb296b899a014c141355b158e9d5fc100259307fbcf732477969d06540be24ab5
 EBUILD elfix-0.5.2.ebuild 820 SHA256 83b8c784bcd87cf3629a816bdb63c5ebba0b93d720b41eee8734c8c7d6bc8a44 SHA512 9ea40a25234d8c1e41608de894c3bf574b0cd2a3db49e730ea984da4b2c65a960d4983986eab54adf5859c70712fecb474d99dd489776d857c564be13560b3de WHIRLPOOL c57852e547bf5099c253ff7b6c06e0b2f3baff018d7e7d2b46139fd3253041d4486b032c7977e2df3c2b6f7922d53a6aca93da3021558ae973c850c779a89302
 EBUILD elfix-0.6.0.ebuild 896 SHA256 a985164083dc6569dd347fedc19c7982730b866c9739566bdd1b2cd6173af06b SHA512 a78c058ce623ce440cc95126ba14cefc5dc60ace7a149347b19838f152be641d963d746ca772a1b5716650370954c62ab173425d1126092dc1aabe161bd4a0aa WHIRLPOOL ce7bb252f562867299c58a41473b546d1ec7c8899c09f527d3aec2a624c3f65f90238635706e6327e9415388d3a9defbaf8d5072015c04fa4500e5c47468e6d0
-EBUILD elfix-0.7.0.ebuild 977 SHA256 99ac3fcd7b82bf5b5e834900964d45569c4212abada3809be7023acfae797128 SHA512 6219d091320074ca63e79b90a7c5c6cec9710852fd62d1cfc7477b4edb4695b0490fc9e8369311a998a4828d052f1743f2ed2c5f69fcca1c50477d53564a79d0 WHIRLPOOL 36fdb7ac447cc7333a6002fe2aa45be00af783b1663a12c1a98a6df18049f38b00f78c79200f4f3f941f96b80077ff8fd26d9e379e80693da1100f65d26c7efa
-MISC ChangeLog 5607 SHA256 fb2416b69f0c2e1cb4dc52820fbcdd2c69c46d76de41a7d0fc9437450bbef148 SHA512 47623ce3b9cca475dc92e6da6ba7c9d2c88dc1dcb94b0f54863aecc13abb7c2fd03c3873cc743eaa03b9c19c7207bda61503ca7d0ce14ef5d8c4257c03bdfbfc WHIRLPOOL 213b3557b813a2c345f8d76b9ea64a22367bac4af67b29626b61b3f7dc2df0eff310658b44fec3d71dd6e967799bc5a5936d6d9cb87fde25f9e2da2fc126bdd2
+EBUILD elfix-0.7.0.ebuild 953 SHA256 7e0a525f068d019a6f486b6205c061d58e901767bc59d5e901e02fcd8f1fd967 SHA512 a0b57755cd93416a8c2b039340a9b372cd5ac2f122269b3322c047b0131d2f3c4eb15e467987df6c60dfc421fa473bfdb53dc650fa428f57f560a9cd25d26d49 WHIRLPOOL 6ee636646119da99918c15192941e87989b20d5c22efe7c3e0aff903b727fdbd28495fb901a08193c1d25dca3e46812eec8d1d07dea270449562051ae1b5bb48
+MISC ChangeLog 5868 SHA256 e47dad5ea949b027d81da5d281355f48c1c24d9de1be126180cf6263a6771d6b SHA512 7b135797184d91acd0547fd467e2b664c0da3af2df0c7dae25518cb31f17ce3942095fcf993c73f8ce4d4104b9fc1cbc4906fc70e16c8349d02bd340608b7b07 WHIRLPOOL e69dc7716853b919fd9d117e2facf915084bc16ac270018956cc5b43b36f082729127fcc2fe0a89b4c7c993fbc9facf4302c2330a1e57f7c3f06eabdfe1deb41
 MISC metadata.xml 393 SHA256 81a4b48fc98f0eaa825c15e5aab31a9c2eb0557d7c47d7453963d5f1d247a7ef SHA512 970b25df4289226f1a5e22a98f97f413f14c00c2454100b0e56d96d8f6ba4cc592aef36af569549bf884d49278cbe3de91799d4fdf1d38c318aae414610a075f WHIRLPOOL aa59e113a09a9b16fb579800b695c11c6d63626362db57098544eafff52cb34b3470256ce7ff392f10226e1546f2f60a9737f0ea32ed3875000f0566c82eb270
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQzmvDAAoJEJOE+m71LUu6mqMQAJifDH6ANG+YtifLsBeAq2ye
-1A/PzMR7VeCy/a++7jINcA610HmYn+4ab/wBfCVH+FS4uuMH8x8HO3g76Pt+uhj5
-+Hqi1o6Xg5Rluu7WyvfJKSYgLTOAEmLlQQ7bl9CClLKompnZvip/qvHsOm4O7g12
-o0AG7nUwOXW+pig3kXtm9nJWBYCvqVX9aFeCtl1IUOqNb6C4c+JvLf6vDFXgqH3L
-oTNZXbsyrvqJCwjsgDvAq8ePyFmxOnBClqZb0bMuPfJqRBrzP49g61CR2wkz3QYw
-EeqUjgrG5Tu557QG0rx0+mswRe40Am2ds6PtEp0qp/YKRVQrj9Rtcoso/6fxojSA
-2d/sxGWAJWAs+1eQMtnJGhnExq0Sb05DvY3JTAdGB/OwYXqbodRpkr1T0RDHV1+r
-ekxlh0d4bnj5vR3aJnm2WpyXUaVkdFyFIAc06p4/NPtOtVOiyeiHwj7x8PxbmeK2
-qCtDS60a36PtQLCah2RvwJOPtXD+LXpi2Pe8oZtrlHctIxobTLi8z3+mGs8q00lS
-xje/fTmB6vHdG6Nhvba5HJiP84B+OBBVjux+0hoi1PEsovspxu/q+nDcuyZfHeh5
-lNmhagqNRKSVBREgigSJNgEUbSHWxmCnmOnSJJX7OR6/Kz7SwIrlQec1RJpib+/A
-dp58lafw7jgZgfDleLz+
-=qeB3
+iQIcBAEBCAAGBQJQz9AvAAoJEJOE+m71LUu6Fo4P/3mZh1HukhuSLhDq/jeov/Sb
+aFKm+tHT0SIC/4To1FHBjjsh7DOKC5WT55V0G5ekny1zFmNjlLNS/lit6FcET75K
+k95qBBhvMQ0Ew4/ErxU/geiXI4QRTmyfRgh74MsyaGuB2pZSV/MofBHNbBA+mqBN
+A5w7L0ATox83MkQF+2JArwpjUpQNPbPC3Owg6cOR/a9bTB2ObL8Bm/5izU+99iO4
+sUT/tKq2IOw37gmAxnwUQWExsiVVVF/GeT+NzdNbLF5bBJ4wodrBREA5V8d7+qQL
+yjgLC9dQ47ADK3FR1HIgcmA+iA9ljP9aPduWpXv4vwGY0kkllUYGgZ99YixRHpBa
+rPhEQ5+8KyrIKuoYHW/ZGsEln/S0QGBBAp3KkxoW923rOqW08k5Hx6sCkITDQf7q
+ZlVz+XIvNf9b2lzkc2U0kx9ywJaADhwwdGnLs02dftH2lKfgnw5J0IFJq3o6wjCG
+BzokRoLhR0vnlNJUA5yE2gtqx7CO7rOdZ/uHYtjo/jF9fb+B1kExJop1K2ibfPA3
+pHweAc21hCN1ZzV42th/KxeyJZqnC3UyeuV3+RRQ+zUlbNHjBwXhgGAV2NsICENB
+irVZfLrAhOITOi9XXJudrGaUGRuoxU1FY9L9I71z8IfHnNRFI9/KoT0299McEJup
+cdQjAPZoD9OAl6k1mCYH
+=mKpm
 -----END PGP SIGNATURE-----
