@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/elfix/elfix-0.7.0.ebuild,v 1.1 2012/12/17 00:47:44 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/elfix/elfix-0.7.0.ebuild,v 1.3 2012/12/18 02:08:42 blueness Exp $
 
 EAPI="4"
 
@@ -11,9 +11,9 @@ SRC_URI="http://dev.gentoo.org/~blueness/elfix/${P}.tar.gz"
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
-IUSE="test +ptpax xtpax"
+IUSE="+ptpax +xtpax"
 
-# These only work on a properly configure pax kernel
+# These only work on a properly configured pax kernel
 RESTRICT="test"
 
 DEPEND="
@@ -26,9 +26,9 @@ RDEPEND="${DEPEND}"
 src_configure() {
 	rm -f "${S}/scripts/setup.py"
 	econf \
-		$(use_enable test tests) \
-		$(use_enable ptpax ptpax) \
-		$(use_enable xtpax xtpax)
+		--disable-tests \
+		$(use_enable ptpax) \
+		$(use_enable xtpax)
 }
 
 src_install() {
